--- a/renovate.json
+++ b/renovate.json
@@ -1,7 +1,5 @@
 {
   "extends": ["github>shelfio/renovate-config-public"],
-  "labels": ["dependencies", "backend"],
-  "ignoreDeps": [
-    "cimg/node"
-  ]
+  "labels": ["dependencies"],
+  "ignoreDeps": ["cimg/node"]
 }
