--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   ],
   "scripts": {
     "lint": "yarn lint:ci --fix",
-    "lint:ci": "eslint ."
+    "lint:ci": "eslint .",
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{html,md,yml}": "prettier --write",
@@ -56,7 +57,6 @@
   "devDependencies": {
     "@shelf/eslint-config": "4.2.1",
     "@shelf/prettier-config": "1.0.0",
-    "@types/node": "22.10.1",
     "eslint": "9.16.0",
     "husky": "9.1.7",
     "jest": "29.7.0",
